# ThreeCXAPI

./: .gitignore  CHANGELOG.md  coverage_check.py  exceptions.py  pyproject.toml  swagger_checker_enum.py  swagger_checker_pbx.py  swagger_to_pbx.py  tcx_api_connection.py  temp.py  util.py
.openapi/: openapi_3.0.4.yml
components/responses/: other.py  pbx.py
components/schemas/: other.py  pbx.py
openapi/: openapi_3.0.1.yaml
resources/: api_resource.py  group.py  groups.py  peers.py  trunks.py  users.py
resources/exceptions/: trunks_exceptions.py  users_exceptions.py
tests/: test_tcx_api_connection.py
tests/components/: test_parameters.py
tests/resources/: test_groups.py  test_user.py  test_users.py
tests/util/: test_util.py
threecxapi/: exceptions.py  tcx_api_connection.py  util.py
threecxapi/components/: parameters.py  schema.py
threecxapi/components/responses/: other.py  pbx.py
threecxapi/components/schemas/: enums.py  other.py  pbx.py
threecxapi/components/schemas/pbx/: _pbx.py
threecxapi/resources/: api_resource.py  groups.py  peers.py  trunks.py  users.py
threecxapi/resources/exceptions/: groups_exceptions.py  peers_exceptions.py  trunks_exceptions.py  users_exceptions.py
threecxapi/tests/: test_tcx_api_connection.py
threecxapi/tests/resources/: test_groups.py
