[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "threecxapi"
authors = [{ name = "Matt Henry", email = "matthttam8411@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
]
dynamic = ["version", "description"]
description-file = "README.md"

[project.urls]
Home = "https://github.com/matthttam/ThreeCXAPI"

[project.requires-extra]
test = ["pytest", "pytest-cov", "tox"]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
    "-vvvv",
    "--showlocals",
    "-p no:xvfb",
    "-r a",
    "--doctest-glob=",
]
pythonpath = "."

[tool.black]
line-length = 120
